@@ -1,3 +1,15 @@
+2005-01-03  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/mxverify.c:
+	    Treat  dnsmxlookup() result value 2 always as a "hard error".
+
+2004-12-04  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/policytest.c:
+	    Revert 2004-06-22 "in MSA-mode, _ignore_ 'relaycustnet +'
+	    attributes" change.  It got bypassed with 2004-10-19
+	    change to demand authentication in SUBMISSION/MSA mode.
+
 2004-11-28  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/mxverify.c, transports/smtp/smtp.c,
